tests/parser/bad/lib/lmodule-library-cid-type-cid-eq-with.scillib
library TestLib

(* missing bar *)
type House =
Kind of String
